# zecwallet-light-cli

./: Cargo.toml  README.md
lib/src/: lightwallet.rs
lib/src/lightclient/: lightclient_config.rs
lib/src/lightwallet/: data.rs  wallettkey.rs
patches/components/zcash_address/src/: encoding.rs
patches/components/zcash_address/src/kind/: p2pkh.rs  p2sh.rs
patches/zcash_primitives/src/: consensus.rs
patches/zcash_primitives/src/constants/: regtest.rs  testnet.rs
